<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Movie Catalog</string>
    <string name="rating_base">/10</string>
    <string name="rating_value">8</string>
    <string name="search_text">Search</string>
    <string name="favorite_button">Favorite</string>
    <string name="unfavorite_button">Dislike</string>
    <string name="image_description">Description</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">TV Show</string>
    <string name="title">Movie Title</string>
    <string name="date">Release Date</string>
    <string name="synopsis">SYNOPSIS</string>
    <string name="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="item_menu">Change Language Settings</string>
    <string name="item_settings">Settings</string>
    <string name="title_activity_favorite">My Favorites List</string>

    <string name="message_save">Successfully added to Favorite</string>
    <string name="message_delete">Successfully deleted from Favorite</string>

    <string name="no_data_available">No Data Available</string>

    <!--Notifications-->
    <string name="daily_notif_title">Catalogue Movie</string>
    <string name="daily_notif_content">Catalogue Movie missing you</string>
    <string name="new_release_notif_title">NEW RELEASE</string>
    <string name="new_release_notif_content">has been release today!</string>

    <!--Setting Menu-->
    <string name="daily_title_switch">Daily Reminder</string>
    <string name="daily_desc_switch">Reminder for return to app</string>
    <string name="new_title_switch">Release Reminder</string>
    <string name="new_desc_switch">Reminder showing the movie that released today</string>
</resources>
