<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SettingsActivity">

    <Switch
        android:id="@+id/switch_new"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setting_new_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/new_desc_switch"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/switch_new"
        app:layout_constraintTop_toBottomOf="@+id/setting_new" />

    <TextView
        android:id="@+id/setting_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_title_switch"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/switch_new"
        app:layout_constraintTop_toTopOf="@+id/switch_new" />

    <Switch
        android:id="@+id/switch_daily"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_new" />

    <TextView
        android:id="@+id/setting_daily_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/daily_desc_switch"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/switch_daily"
        app:layout_constraintTop_toBottomOf="@+id/setting_daily" />

    <TextView
        android:id="@+id/setting_daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/daily_title_switch"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/switch_daily"
        app:layout_constraintTop_toTopOf="@+id/switch_daily" />

</android.support.constraint.ConstraintLayout>